--- a/lessen/week-2/les-1/contactpagina-setup/studentversie/index.html
+++ b/lessen/week-2/les-1/contactpagina-setup/studentversie/index.html
@@ -26,6 +26,11 @@
       </div>
 
       <div class="form-contactpagina__inputelement fx-col">
+        <label for="phone">Telefoon: </label>
+        <input type="tel" name="phone" id="phone" pattern="[0-9]{10}" placeholder="0612345678" required>
+      </div>
+
+      <div class="form-contactpagina__inputelement fx-col">
         <label for="email">Email: </label>
         <input type="email" name="email" id="email">
       </div>
